--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <!-- Главный экран -->
     <section class="hero" id="hero">
-        <h1>Привет! меня зовут Кирилл</h1>
-        <p class="subtitle">я занимаюсь разработкой красивых и функциональных веб-приложений</p>
+        <h1 id="typed-name"></h1>
+        <p id="typed-subtitle" class="subtitle"></p>
     </section>
 
     <!-- Модальное окно "Обо мне" -->
@@ -126,5 +126,6 @@
 
     <script src="vendors/particles.min.js"></script>
     <script src="public/js/app.js"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </body>
 </html>
