модальные окна описания проектов + формы ссылок на гитхаб и сами проекты

--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
         <h2>Мои работы</h2>
         <div class="project-grid">
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Проект 1">
+                <img src="https://i.pinimg.com/736x/8b/9c/0b/8b9c0b25a34d98795ad82bbc24bae8c1.jpg" alt="Проект 1">
                 <div class="project-info">
                     <h3>Название проекта</h3>
                     <p>Краткое описание проекта и технологий</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Проект 2">
+                <img src="https://i.pinimg.com/736x/8b/9c/0b/8b9c0b25a34d98795ad82bbc24bae8c1.jpg" alt="Проект 2">
                 <div class="project-info">
                     <h3>Название проекта</h3>
                     <p>Краткое описание проекта и технологий</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Проект 3">
+                <img src="https://i.pinimg.com/736x/8b/9c/0b/8b9c0b25a34d98795ad82bbc24bae8c1.jpg" alt="Проект 3">
                 <div class="project-info">
                     <h3>Название проекта</h3>
                     <p>Краткое описание проекта и технологий</p>
@@ -112,7 +112,21 @@
             <div class="skill-meter"><span style="animation-delay: 0.8s"></span></div>
         </div>
     </section>
-
+    
+    <section>
+        <div class="project-modal" id="projectModal">
+            <div class="project-modal-content">
+                <button class="project-modal-close">&times;</button>
+                <img src="" alt="Скриншот проекта" class="project-image">
+                <h2 class="project-title"></h2>
+                <p class="project-description"></p>
+                <div class="project-tech-stack"></div>
+                <div class="project-links">
+                    <a href="#" class="project-link project-github" target="_blank">GitHub</a>
+                    <a href="#" class="project-link project-demo" target="_blank">Демо</a>
+                </div>
+            </div>
+    </section>
     <!-- Контакты -->
     <section class="contact fade-in">
         <h2>Связаться со мной</h2>
